samples/_failures_safe/1761438361_399052_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bd2721a.c: In function ‘main’:
./samples/SAFE/__tmp_7bd2721a.c:151:25: error: expected ‘;’ at end of input
  151 |             print_matrix
      |                         ^
      |                         ;
./samples/SAFE/__tmp_7bd2721a.c:151:13: error: expected declaration or statement at end of input
  151 |             print_matrix
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_7bd2721a.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7bd2721a.c:151:13: error: expected declaration or statement at end of input
